this is the commit changes which was done in front of Shreyas.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,6 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+vars:
+  default_status: "'Unknown'"
+  default_order_date: "'1900-01-01'"
